--- a/src/Core.Entity/Core.Entity.csproj
+++ b/src/Core.Entity/Core.Entity.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="GT.Agreement" Version="0.2.0-beta" />
+  </ItemGroup>
+
 </Project>
