--- a/src/Host.Api/Properties/launchSettings.json
+++ b/src/Host.Api/Properties/launchSettings.json
@@ -5,7 +5,7 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:59112",
-      "sslPort": 44347
+      "sslPort": 5002
     }
   },
   "profiles": {
@@ -20,8 +20,8 @@
     "Host.Api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:5002",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
