--- a/templates/project/clients/webapp/package.json
+++ b/templates/project/clients/webapp/package.json
@@ -19,11 +19,11 @@
     "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~10.0.11",
     "@angular/localize": "~10.0.11",
-    "@angular/material": "~10.1.3",
+    "@angular/material": "~10.2.0",
     "@angular/platform-browser": "~10.0.11",
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
-    "angular-auth-oidc-client": "^11.2.0",
+    "angular-oauth2-oidc": "^10.0.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
