--- a/templates/project/clients/webapp/tsconfig.base.json
+++ b/templates/project/clients/webapp/tsconfig.base.json
@@ -12,6 +12,7 @@
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
+    "allowJs": true,
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
