模板更新,spa 单点登录

--- a/templates/project/clients/webapp/angular.json
+++ b/templates/project/clients/webapp/angular.json
@@ -52,6 +52,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -75,8 +76,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "1kb",
+                  "maximumError": "2mb"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -147,6 +148,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "webapp"
 }
