--- a/templates/project/src/Data.Context/Data.Context.csproj
+++ b/templates/project/src/Data.Context/Data.Context.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0-rc.2.20475.6" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Core.Entity\Core.Entity.csproj" />
   </ItemGroup>
 
