--- a/templates/project/src/App.Api/appsettings.json
+++ b/templates/project/src/App.Api/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "Jwt": {
+    "Sign": "Geethin.YourSignSecretKey",
+    "Issuer": "Geethin.YourIssuer",
+    "Audience": "YourAudiences"
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=db_name;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  }
 }
