--- a/templates/project/src/Core.Entity/Core.Entity.csproj
+++ b/templates/project/src/Core.Entity/Core.Entity.csproj
@@ -4,8 +4,14 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
+  </PropertyGroup>
+  
   <ItemGroup>
-    <PackageReference Include="GT.Agreement" Version="0.2.0-beta" />
+    <PackageReference Include="GT.Agreement" Version="0.3.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
