--- a/templates/project/src/Core.Services/Core.Services.csproj
+++ b/templates/project/src/Core.Services/Core.Services.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.7.0" />
     <PackageReference Include="Azure.Storage.Files.Shares" Version="12.5.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
