--- a/templates/project/src/Share/Share.csproj
+++ b/templates/project/src/Share/Share.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core.Entity\Core.Entity.csproj" />
+  </ItemGroup>
+
 
 </Project>
