--- a/Template.csproj
+++ b/Template.csproj
@@ -2,13 +2,14 @@
 
   <PropertyGroup>
     <PackageType>Template</PackageType>
-    <PackageVersion>0.3.6</PackageVersion>
+    <PackageVersion>1.0.0-beta</PackageVersion>
     <PackageId>GT.Framework.Web</PackageId>
+    <OutputPath>nupkg</OutputPath>
     <Title>GT Web开发框架模板</Title>
     <Authors>GT.Niltor</Authors>
     <Description>基于Asp.net core 与 angular的项目模板</Description>
     <PackageTags>templates;web;angular;asp.net core</PackageTags>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
 
     <IncludeContentInPack>true</IncludeContentInPack>
     <IncludeBuildOutput>false</IncludeBuildOutput>
