--- a/templates/project/src/App.Api/App.Api.csproj
+++ b/templates/project/src/App.Api/App.Api.csproj
@@ -21,8 +21,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
 
-    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.1.2" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.1.2" />
+    <PackageReference Include="NSwag.AspNetCore" Version="13.10.9" />
     <PackageReference Include="IGeekFan.AspNetCore.Knife4jUI" Version="0.0.8" />
   </ItemGroup>
 
